# rokus-amt-dose

./: CMakeLists.txt  Dockerfile  plot.mac  project3.cc  readme.md  result.csv  rocus.cc  run.sh  spectrum.cc  spectrum.sh  spectrum_fantom.cc  vis.mac
data/: closet.csv  constructData.xml  constructMaterial.xml  sourceData.txt  sourceData.xml
distance_macro/: distance.sh
distance_plot/: distance_plot.cc  model10.csv  model11.csv
include/: action.hh  construction.hh  detector.hh  detectorPlane.hh  detectorRadDecay.hh  generator.hh  physics.hh  run.hh  setActivity.hh  typeCalc.hh
macro/: cap1.mac  cap2.mac  container.mac  distance.sh  vis.mac
output/: closet_plot.cc  distance_plot.cc  plane_distance.cc  plane_plot.cc  spectrum_fantom.cc  spectrum_source.cc
output/plane/: planeResult.csv
plane_plot/: planeResult.csv  plane_plot.cc
scripts/: closet.sh  distance.sh  plane.sh  plane_distance.sh  run.sh  spectrum.sh
src/: action.cc  construction.cc  detector.cc  detectorPlane.cc  detectorRadDecay.cc  generator.cc  physics.cc  run.cc  setActivity.cc  typeCalc.cc
verification/: closet_mistake.cc  closet_plot.cc  distance.cc  distance_plot.cc  mistake.cc  plane_mistake.cc  plane_plot.cc  step.cc
verification/closet/: closetResult.csv  exp.csv
verification/distance/: distanceResult.csv  model1.csv  model2.csv
verification/mistake/: 630.csv
verification/plane/: 164.csv  planeExp.csv  planeExp2.csv
